fix: pure horizontal/vertical edges with stroke array not being visible

--- a/apps/website/src/index.css
+++ b/apps/website/src/index.css
@@ -101,12 +101,6 @@ td {
     @apply rounded-t-lg;
 }
 
-@keyframes drawLine {
-    to {
-        stroke-dashoffset: 0;
-    }
-}
-
 /* Minigame stuff */
 @utility box {
     @apply transition-all w-[35px] h-[35px] border border-black/10 cursor-pointer;
@@ -202,23 +196,6 @@ td {
     to {
         transform: translate(-50%, -50%) scale(1.4) rotate(1turn);
     }
-}
-
-.running-light {
-    stroke-dasharray: 5, 200;
-    stroke-dashoffset: 0;
-    animation: runningLight 5s linear infinite;
-    opacity: 0.4;
-}
-
-@keyframes runningLight {
-    to {
-        stroke-dashoffset: -205;
-    }
-}
-
-.dark .running-light {
-    opacity: 0.3;
 }
 
 .logo-text {
